# Axis_MVP

./: IMPLEMENTATION_GUIDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
axis-agent/: CLAUDE.md  app.json  create_master_token.ts  fill-faucet.sh.save  index.html  metro.config.js  package.json  tsconfig.app.json  vite.config.ts  wrangler.jsonc
axis-agent/.claude/: settings.local.json
axis-agent/Docs/: TOKEN_SYSTEM.md  api.md  architecture.md  dev.md
axis-agent/ios/: Podfile
axis-agent/scripts/: create_pool.ts
axis-agent/src/: App.tsx  Home.tsx  Providers.tsx  index.css  main.tsx  mobile-styles.css  router.tsx
axis-api/: fill-faucet.sh  package.json  schema.sql  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
axis-api/.claude/: settings.local.json
axis-api/docs/: performance-tracking.md
axis-api/migrations/: 0005_add_xp_and_stats.sql
axis-api/schema/: schema.sql
axis-api/src/: app.ts
axis-mobile/: App.tsx  app.json  index.ts  metro.config.js  package.json  tailwind.config.js
axis-mock/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  wrangler.toml
axis-mock/app/: page.tsx
kagemusha-program/: .gitignore  Anchor.toml  Cargo.toml  README.md  lib.rs.bak
kagemusha-program/programs/kagemusha/: Cargo.toml
kagemusha-program/programs/kagemusha/src/: errors.rs  lib.rs
kagemusha-program/programs/kagemusha/src/instructions/: deposit.rs  deposit_sol.rs  initialize.rs  mod.rs  rebalance.rs  withdraw.rs  withdraw_sol.rs
kagemusha-program/programs/kagemusha/src/state/: mod.rs
(+198 files in other folders)
