[workspace]
members = ["programs/kagemusha"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

# Force older versions to avoid edition2024 requirement in constant_time_eq 0.4.2
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }
